[TASK] ADWD-1138 fix line break in popup

--- a/Resources/Private/Scss/germania-sacra.scss
+++ b/Resources/Private/Scss/germania-sacra.scss
@@ -228,6 +228,7 @@ $formLabelWidth: 150px;
 			padding-right: 5px;
 			padding-top: 5px;
 			line-height: 1.2;
+			min-width: 5em;
 		}
 		h3 {
 			line-height: 1.2;
